# sata

./: .editorconfig  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  GIT_CONVENTION.md  README.md  app.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
.githooks/: commit-msg  pre-commit  pre-push
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
_bmad-output/: project-context.md
_bmad-output/brainstorming/: brainstorming-session-2026-03-29-01.md
_bmad-output/implementation-artifacts/: 1-1-project-foundation-scaffold-and-pipeline-skeleton.md  1-2-openapi-swagger-file-upload-and-parsing.md  1-3-api-spec-url-import.md  1-4-spec-gap-detection-and-targeted-questions.md  1-5-conversational-api-description-and-zero-endpoint-fallback.md  deferred-work.md  (+25 more)
app/: pipeline.py  state.py
config/: settings.yaml
docs/: architecture.md  component-inventory.md  deployment-guide.md  development-guide.md  index.md  project-overview.md  project-scan-report.json  source-architecture.md  source-tree-analysis.md  spec-review-panel-reference.md
reports/: sata-results-20260411-135721-712470.md  sata-results-20260411-135843-049921.md
src/: __init__.py
tests/: test_conversational_spec_builder.py  test_env.py  test_parse_spec_node.py  test_pipeline.py  test_pipeline_visualization.py  test_review_spec_node.py  test_spec_editor.py  test_spec_fetcher.py  test_spec_gap_detector.py  test_spec_parser.py  test_spec_review.py  test_state.py
(+93 files in other folders)
